--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "TARGET_IP":"192.168.5.176",
     "DEBUG_PORT":"6666",
-    "BINARY":"displaytext.bin",
+    "BINARY":"displaytext",
 
     "SDK_DIR":"/opt/poky-sadika/4.0.16/environment-setup-cortexa53-poky-linux",
 }
