Show temperature and humidity on the SSD1306 OLED
Quick fixes to add the following features:

- Show temperature and humidity on the mini OLED display
- Check temperature ahd humidity on every second and update the
  related lines on the screen
- Run an infinite loop and exit the application with signals:
  SIGINT, SIGKILL, SIGTERM
- Print problems in cerr (the standard output stream for errors)

Signed-off-by: Leon Anavi <leon@anavi.org>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,63 @@
     "DEBUG_PORT":"6666",
     "BINARY":"displaytext",
 
-    "SDK_DIR":"/opt/poky-sadika/4.0.16/environment-setup-cortexa53-poky-linux",
+    "SDK_DIR": "/opt/poky-sadika/4.0.16/environment-setup-cortexa53-poky-linux",
+    "files.associations": {
+        "iostream": "cpp",
+        "new": "cpp",
+        "string_view": "cpp",
+        "string": "cpp",
+        "optional": "cpp",
+        "system_error": "cpp",
+        "array": "cpp",
+        "functional": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp",
+        "istream": "cpp",
+        "ostream": "cpp",
+        "iosfwd": "cpp",
+        "iomanip": "cpp",
+        "cctype": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "cstdarg": "cpp",
+        "cstddef": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "cstring": "cpp",
+        "ctime": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
+        "atomic": "cpp",
+        "bit": "cpp",
+        "*.tcc": "cpp",
+        "chrono": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "cstdint": "cpp",
+        "deque": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "exception": "cpp",
+        "algorithm": "cpp",
+        "iterator": "cpp",
+        "memory": "cpp",
+        "memory_resource": "cpp",
+        "numeric": "cpp",
+        "random": "cpp",
+        "ratio": "cpp",
+        "initializer_list": "cpp",
+        "limits": "cpp",
+        "numbers": "cpp",
+        "ranges": "cpp",
+        "semaphore": "cpp",
+        "sstream": "cpp",
+        "stdexcept": "cpp",
+        "stop_token": "cpp",
+        "streambuf": "cpp",
+        "thread": "cpp",
+        "cinttypes": "cpp",
+        "typeinfo": "cpp"
+    },
 }
